@@ -9,6 +9,9 @@ as filenames in the metadata file (LF => \n and \ => \\).
 
 Fix from Paul P Komkoff Jr for uid typo in text_to_entrytuple.
 
+bug#12726: fix regressing of devices while running as non-root -- zero
+length files are created as placeholders.
+
 New in v0.13.6 (2005/04/07)
 ---------------------------
 
